--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,10 @@ footer {
   color: #fff;
   text-align: center;
   padding: 20px 0;
-  position: absolute;
+  position: "fixed";
+  left: 0;
+  bottom: 0;
+  right: 0;
   width: 100%;
 }
 @media (max-width: 768px) {
