--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,15 @@
+/* General Styles */
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: Verdana, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #e8f0fe;
   color: #333;
 }
 
+/* Header */
 header {
-  background-color: #4a90e2;
+  background-color: #73999B;
   color: #fff;
   padding: 1.5rem 0;
   text-align: center;
@@ -20,6 +22,7 @@ header h1 {
   letter-spacing: 2px;
 }
 
+/* Navigation */
 nav ul {
   list-style: none;
   padding: 0;
@@ -40,27 +43,30 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: #ffd700;
+  color: #828077;
 }
 
+/* Container */
 .container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
 }
 
+/* Sections */
 .section {
   margin-bottom: 40px;
 }
 
 .section h2 {
-  color: #4a90e2;
-  border-bottom: 2px solid #4a90e2;
+  color: #73999B;
+  border-bottom: 2px solid #73999B;
   padding-bottom: 10px;
   font-size: 1.8rem;
   text-transform: uppercase;
 }
 
+/* Bio Section */
 .bio {
   display: flex;
   flex-wrap: wrap;
@@ -80,8 +86,9 @@ nav ul li a:hover {
   flex: 1;
 }
 
+/* Footer */
 footer {
-  background-color: #4a90e2;
+  background-color: #73999B;
   color: #fff;
   text-align: center;
   padding: 20px 0;
@@ -98,21 +105,24 @@ footer p {
   z-index: 200;
 }
 
+/* Responsive Design for Bio Section */
 @media (max-width: 768px) {
   .bio {
-    flex-direction: column;
-    text-align: center;
+      flex-direction: column;
+      text-align: center;
   }
   .bio img {
-    margin: 0 auto 20px;
+      margin: 0 auto 20px;
   }
 }
 
+/* Table Styles */
 .scrollable-table {
   width: 100%;
   border-collapse: collapse;
   margin: 20px 0;
   table-layout: fixed;
+  border: 1px solid #828077;
 }
 
 .scrollable-table.learned-table {
@@ -124,15 +134,16 @@ footer p {
 .scrollable-table td {
   text-align: left;
   padding: 8px;
-  border: 1px solid #ddd;
+  border: 1px solid #828077;
   word-wrap: break-word;
 }
 
 .scrollable-table thead {
-  background-color: #f2f2f2;
+  background-color: #828077;
+  color: white;
   position: sticky;
   top: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 .scrollable-table th:first-child,
@@ -158,4 +169,10 @@ footer p {
   display: table;
   width: 100%;
   table-layout: fixed;
+}
+
+/* Mouseover Effects */
+a:hover, tr:hover {
+  background-color: #828077;
+  color: white;
 }
