--- a/src/App.css
+++ b/src/App.css
@@ -171,6 +171,41 @@ footer p {
   table-layout: fixed;
 }
 
+/* Responsive Table Design */
+@media (max-width: 768px) {
+  .scrollable-table {
+    display: block;
+  }
+  
+  .scrollable-table thead {
+    display: none;
+  }
+  
+  .scrollable-table tbody tr {
+    display: block;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #828077;
+  }
+
+  .scrollable-table tbody td {
+    display: block;
+    text-align: right;
+    padding-left: 50%;
+    position: relative;
+    white-space: pre-wrap;
+  }
+
+  .scrollable-table tbody td:before {
+    content: attr(data-label);
+    position: absolute;
+    left: 0;
+    width: 50%;
+    padding-left: 15px;
+    font-weight: bold;
+    text-align: left;
+  }
+}
+
 /* Mouseover Effects */
 a:hover, tr:hover {
   background-color: #828077;
